fix: divier spacing

--- a/src/styles/components/_divider.scss
+++ b/src/styles/components/_divider.scss
@@ -7,7 +7,7 @@
 	height: 20vh;
 
 	&.invert {
-		transform: scaleY(-1);
+		padding-top: 4rem;
 	}
 
 	& .divider-left {
